--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,74 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
+body{
+  background:#1a1a1a
+}
+@font-face {
+  font-family: "Euclid";
+  src: url("./assets/Euclid.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Sf Pro";
+  src: url("./assets/sf-pro.ttf") format("truetype");
+}
+.euclid{
+    font-family: 'Euclid';
+}
+.zen{
+    font-family: 'Zen Dots', cursive;
+}
+.grad-title{
+   background: linear-gradient(92.22deg, #AD00FF 0.51%, #00C2FF 55.21%);
+    font-family: 'Zen Dots', cursive;
+   font-size: 24px;
+font-weight: 400;
+line-height: 29px;
+}
+.textSf{
+   font-family:'Sf Pro', san-serif;
+}
+.normal-title{
+     font-family: 'Zen Dots', cursive;
+   font-size: 24px;
+font-weight: 400;
+line-height: 29px;
+color:"#fff"
+}
+.normal-subT{
+     font-family: 'Zen Dots', cursive;
+   font-size: 20px;
+font-weight: 400;
+line-height: 29px;
+color:"#fff"
+}
+.gradient-text{
+background: linear-gradient(92.22deg, #AD00FF 0.51%, #00C2FF 55.21%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+background-clip: text;
+fill: transparent;
+}
+.connectBtn{
+  background: linear-gradient(92.22deg, #AD00FF 0.51%, #00C2FF 55.21%);
+  padding:0.5rem 1rem;
+  font-family:'Sf Pro', san-serif;
+  font-size:16px;
+  border-radius:4px;
+  color:white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.hr{
+  height:2px;
+  background:#999999;
+  width:100%;
 }
+.card-title{
+  font-family: "Euclid";
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+color:#fff
+}
+
